# odev

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cliff.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-test.yml  lock-upgrade.yml  pr-title-check.yml  prepare-release.yml  readme-update.yml  release.yml
src/odev/: __init__.py
src/odev/git/: conventional_subject.py  core.py
src/odev/git/commit/: cli.py
src/odev/git/commit_msg_check/: check_commit_msg.py  cli.py
src/odev/git/hide/: cli.py
src/odev/git/pr_title_check/: check_pr_title.py  cli.py
tests/: test_commit_cli.py  test_commit_msg_check.py  test_core.py  test_pr_title_check.py
