[project]
name = "odev"
version = "0.1.0"
description = "Personal development helpers focused on git workflows"
readme = "README.md"
authors = [
    { name = "Noai-oss", email = "jiuwoxiao@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "questionary>=2.1.1",
]

[project.scripts]
ghi = "odev.git.hide.cli:main"
odev-commit-msg = "odev.git.commit_msg_check.cli:hook_main"
odev-pr-title-check = "odev.git.pr_title_check.cli:hook_main"
odev-commit = "odev.git.commit.cli:main"
oc = "odev.git.commit.cli:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "git-cliff>=2.13.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.32",
    "typos>=1.45.1",
]
