[project]
name = "odev"
version = "0.1.0"
description = "Personal development helpers focused on git workflows"
readme = "README.md"
authors = [
    { name = "Noai-oss", email = "jiuwoxiao@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "questionary>=2.1.1",
]

[project.scripts]
odev-commit-msg = "odev.git.commit_msg_check.cli:hook_main"
odev-pr-title-check = "odev.git.pr_title_check.cli:hook_main"
odev-commit = "odev.git.commit.cli:main"
oc = "odev.git.commit.cli:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "git-cliff>=2.13.1",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
    "typos>=1.47.2",
]
